
2023-02-22  Simon Sobisch <simonsobisch@gnu.org>

	fix bug #874 DISPLAY of 9P fields (P to the left of the decimal point)
	* termio.c (pretty_display_numeric): fix printing one byte after
	  actual data
	* termio.c (display_numeric): fix printing amount of P as leading zeroes

2023-02-21  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_decimal_set_packed): backport and extend optimization
	  from 4.x by Ron - now skipping initial zeros and for huge fields handle
	  4 digits at once

2023-02-20  Simon Sobisch <simonsobisch@gnu.org>

	* intrinsic.c, numeric.c: explicit check result of mpz_sgn to 0/!0/1/-1
	* intrinsic.c (cob_intr_random): fix binary end for implicit seed
	* intrinsic.c (numval): minor optimization for invalid numeric
	* termio.c (display_numeric, pretty_display_numeric): use common
	  COB_FIELD_INIT instead of manually init of field named "temp";
	  minor speedup in output

2023-02-10  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_bcd_cmp, packed_is_negative, decimal_convert_scale,
	  insert_packed_aligned): finished

2023-02-09  Simon Sobisch <simonsobisch@gnu.org>

	* mlio.c, common.c: handle HAVE_JSON_C_JSON_H
	* intrinsic.c (split_around_t): explicit terminate snprintf
	* termio.c (pretty_display_numeric): fix GCC warning with {{ 0 }}
	* termio.c (display_alnum_dump): slightly rewritten to fix compiler
	  warnings
	* cconv.c (cob_load_collation), common.c, intrinisic.c (cob_intr_random),
	  termio.c: minor adjustments to fix compiler warnings
	* fileio.c (copy_fcd_to_file): fixed memory issues with writing to assign
	  and select name
	* fileio.c (save_status): don't synch directly after open or close
	* fileio.c (cob_file_open), (open_next): include binary in open flags if
	  cobsetptr->cob_unix_lf is set
	* fileio.c (open_next): set binary file mode, minor refactoring
	* fileio.c (cob_file_close) [_WIN32]: don't try to unlock invalid file
	  handles; mark file descriptor as closed when file handle was closed
	