@@ -1154,10 +1154,10 @@ cob_decimal_set_packed (cob_decimal *d, cob_field *f)
 			if ( (endp - p) > 2) {
 				mpz_mul_ui (d->value, d->value, 10000UL);
 				mpz_add_ui (d->value, d->value,
-					    ((cob_uli_t)(*p >> 4U) * 1000) 
-						+ ((*p & 0x0FU) * 100) 
-						+ ((cob_uli_t)(*(p + 1) >> 4U) * 10) 
-						+ (*(p + 1) & 0x0FU));
+					    ( ((cob_uli_t)(*p >> 4U) * 1000)
+					    + ((cob_uli_t)(*p & 0x0FU) * 100)
+					    + ((cob_uli_t)(*(p + 1) >> 4U) * 10)
+					    + (*(p + 1) & 0x0FU)));
 				p++;
 				nonzero = 1;
 				continue;
@@ -1198,9 +1198,6 @@ cob_decimal_get_packed (cob_decimal *d, cob_field *f, const int opt)
 	const int		sign = mpz_sgn (d->value);
 	size_t		size, diff, i;
 	int 		digits;
-#if 0	/* huge packed-decimal */
-	char		*mza;
-#endif
 
 	/* check for value zero (allows early exit) and handle sign */
 	if (sign == 0) {
@@ -1214,63 +1211,30 @@ cob_decimal_get_packed (cob_decimal *d, cob_field *f, const int opt)
 	   mpz_sizeinbase, as its result is "either exact or one too big" */
 	digits = COB_FIELD_DIGITS (f);
 
-#if 0	/* huge data, currently not used, as that only happens
-	for internal operations like intrinsic functions
-	which are either huge DISPLAY or native integer fields */
-	if (digits > COB_MAX_BINARY) {
-		/* CHECKME: Is there any chance to get here?
-		   Otherwise we should drop the check and code */
-		mza = mpz_get_str (NULL, 10, d->value);
-		size = strlen (mza);
-		diff = (size_t)digits - size;
-		if (diff < 0) {
-			/* Overflow */
-			cob_set_exception (COB_EC_SIZE_OVERFLOW);
+	/* get divisor that would overflow */
+	cob_pow_10 (cob_mexp, digits);
+	/* check if it is >= what we have */
+	if (mpz_cmp (d->value, cob_mexp) >= 0) {
+		/* Overflow */
+		cob_set_exception (COB_EC_SIZE_OVERFLOW);
 
-			/* If the statement has ON SIZE ERROR or NOT ON SIZE ERROR,
-			   then throw an exception */
-			if (opt & COB_STORE_KEEP_ON_OVERFLOW) {
-				cob_gmp_free (mza);
-				return cobglobptr->cob_exception_code;
-			}
-
-			/* numeric truncation,
-			   move to whatever position we can store */
-			q = (unsigned char *)mza + size - digits;
-			size = digits;
-		} else {
-			q = (unsigned char *)mza;
+		/* If the statement has ON SIZE ERROR or NOT ON SIZE ERROR,
+		   then throw an exception */
+		if (opt & COB_STORE_KEEP_ON_OVERFLOW) {
+			return cobglobptr->cob_exception_code;
 		}
+		/* Other size, truncate digits, using the remainder */
+		mpz_tdiv_r (cob_mexp, d->value, cob_mexp);
+		(void) mpz_get_str (buff, 10, cob_mexp);
+		size = digits;
+		diff = 0;
 	} else {
-#endif
-		/* get divisor that would overflow */
-		cob_pow_10 (cob_mexp, digits);
-		/* check if it is >= what we have */
-		if (mpz_cmp (d->value, cob_mexp) >= 0) {
-			/* Overflow */
-			cob_set_exception (COB_EC_SIZE_OVERFLOW);
-
-			/* If the statement has ON SIZE ERROR or NOT ON SIZE ERROR,
-			   then throw an exception */
-			if (opt & COB_STORE_KEEP_ON_OVERFLOW) {
-				return cobglobptr->cob_exception_code;
-			}
-			/* Other size, truncate digits, using the remainder */
-			mpz_tdiv_r (cob_mexp, d->value, cob_mexp);
-			(void) mpz_get_str (buff, 10, cob_mexp);
-			size = digits;
-			diff = 0;
-		} else {
-			/* No overflow, so get string data and fill with zero */
-			(void) mpz_get_str (buff, 10, d->value);
-			size = strlen (buff);
-			diff = (size_t)digits - size;
-		}
-		q = (unsigned char *)buff;
-#if 0	/* huge packed-decimal */
-		mza = NULL;
+		/* No overflow, so get string data and fill with zero */
+		(void) mpz_get_str (buff, 10, d->value);
+		size = strlen (buff);
+		diff = (size_t)digits - size;
 	}
-#endif
+	q = (unsigned char *)buff;
 
 	/* Store number */
 	data = f->data;
@@ -1290,11 +1254,6 @@ cob_decimal_get_packed (cob_decimal *d, cob_field *f, const int opt)
 			*p++ |= x;
 		}
 	}
-#if 0	/* huge packed-decimal */
-	if (mza) {
-		cob_gmp_free (mza);
-	}
-#endif
 
 	if (COB_FIELD_NO_SIGN_NIBBLE (f)) {
 		return 0;
